Workaround for 'Can't click stream name in narrowed view' issue.
There was this very cute problem where if you were narrowed and
scrolled to the top of the page, you couldn't seem to click on the
stream or subject name.

The issue was: the floating_recipient_row div was visibility: hidden,
which means that it made top_statusbar big enough to cover up that top
part, capturing the clicks.

So instead we make top_statusbar also visibility: hidden so that
the clicks get through.

(imported from commit 471e041ba1c429ad0b6e225da22585dc72120945)

--- a/zephyr/static/styles/zephyr.css
+++ b/zephyr/static/styles/zephyr.css
@@ -325,9 +325,15 @@ input.send_message {
     max-width: 670px;
     text-decoration: none;
     top: 0px;
+    visibility: hidden; /* so that we pass clicks through to underneath us */
 }
 
 .narrowed_to_bar {
+    /* We use display: to toggle whether or not this actually shows up,
+       but we need visibility: visible because its parent,
+       top_statusbar, is visibility: hidden and we don't want to
+       inherit that. */
+    visibility: visible;
     display: none;
     padding: 5px 10px;
     background-color: #DDD;
